# AnimeWatcherPlus

./: .gitignore  README.en.md  README.md  build.bat
.github/workflows/: ci.yml
core/: core.spec  pyproject.toml  run.py
core/alembic/: env.py
core/alembic/versions/: 1fa66dc87076_fts5_search_tables.py  280262530db1_force_rebuild_anime_table_to_guarantee_.py  d5464d886f44_add_review_candidates_column.py  d85726b57997_anime_dedup_fields_drop_anidb_id_unique_.py  f51e751d9c84_initial_schema.py
core/app/: auth.py  config.py  logging_config.py  main.py  state.py
core/app/api/: animes.py  deps.py  errors.py  folders.py  settings_api.py  tags.py  ws.py
core/app/db/: models.py  repositories.py  session.py
core/app/domain/: metadata.py
core/app/providers/: anidb.py  base.py
core/app/services/: artwork.py  episode_parse.py  identification.py  jobs.py  nfo.py  scanner.py  settings_store.py  staleness.py  titledump.py
core/tests/: conftest.py
core/tests/integration/: test_alembic_migrations.py  test_anidb_ban_persistence.py  test_anime_repo.py  test_api.py  test_folder_repo.py  test_identification.py  test_scanner.py
core/tests/unit/: test_anidb_provider.py  test_artwork.py  test_episode_parse.py  test_jobs.py  test_nfo.py  test_staleness.py  test_titledump.py
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/src/: lib.rs
shell/ui/: check_ban_banner.js  index.html  package-lock.json  package.json
shell/ui/src/: App.tsx  index.css  main.tsx
shell/ui/src/api/: client.ts  hooks.ts  types.ts  useLiveEvents.ts
shell/ui/src/pages/: Folders.tsx  (+4 more)
(+18 files in other folders)
