[project]
name = "animewatcherplus-core"
version = "0.1.1"
description = "AnimeWatcherPlus NG backend core"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "watchdog>=6.0",
    "httpx>=0.27",
    "rapidfuzz>=3.10",
    "structlog>=24.4",
    "anyio>=4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.14",
    "mypy>=1.13",
]
build = [
    "pyinstaller>=6.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
